<resources>
    <string name="app_name">My Basket</string>

    <string name="my_cart">My Cart</string>
    <string name="amount">Amount:</string>
    <string name="totalCostTitle">Total Cost :</string>
    <string name="title">Add Items</string>
    <string name="etItem">Item</string>
    <string name="etQuantity">Quantity</string>
    <string name="etPrice">Price</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>